# email-news-letter

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  _create_subscriptions_table.sql
.cargo/: config.toml
configuration/: base.yaml  production.yaml
migrations/: 20240806102123_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
