[package]
name = "enl"
version = "0.1.0"
authors = ["Mimanshu Maheshwari <maheshwarimimanshu@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs" 

[[bin]]
path = "src/main.rs" 
name = "enl"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.5"
